 - code checking and cosmetics (mamba)
 - fixed problems with array to string conversion (goffy)
 - added default permissions for creation of albums (goffy)
 - applied XMF code styling - grouppermHandler (mamba/goffy)
 - use coded name for file name of original image (lupin/goffy)
 - added all exif data as array to image object (lupin/goffy)
 - added notification for comments (lupin/goffy)

<h5>1.14 RC1</h5>  [2019/11/09]
<hr>
 - added possibility to store original image (lupin/goffy)
 - implemented permissions for download full album (goffy)
 - added possibility to download full album (goffy)
 - added cleaning invalid ratings in maintenance (goffy)
 - added default exif lens make and lens model (lupin/goffy)
 - fixed bug in fineimageuploader (goffy)
 - fixed bug in saving album cats (goffy)
 - added cleaning invalid cats in maintenance (goffy)
 - correction of help files (goffy)
 - added img_tags/alb_tags to search.inc.php (GregMage/goffy)
 - change of lang defines from cat to coll (goffy)
 - changes in order of module preferences (goffy)
 - fixed missing date in search.inc.php (goffy)
 - added autotically extraction of exif for tags (lupin/goffy)
 - fixed bug with deleting noimage.png when album deleted (goffy)
 - added configuration system to oninstall (goffy)
 - removed album edit from idex page (goffy)
 - fixed bug with overlapping divs for numeric rating (lupin/goffy)
 - fixed bug in jssor contants (goffy)
 - added italian language (lupin)
 - fixed display problem (alain/goffy)
 - fixed problem with redirect after posting comments (lupin/goffy)
 - fixed bug with deleting albums in admin area (goffy)
 - fixed redirect params (goffy)
 - added column with sub albums in admin/albums template (goffy)
 - fixed bug with xoopsnav in images.php (goffy)
 - added possibility to delete exif data (goffy)

<h5>1.13 RC1</h5>  [2019/../..]
<hr>
 - added rating system (stars or likes) (goffy)
 - cosmetics (goffy)
 - fixed bug with import extgallery (mjoel/goffy)